@@ -1,62 +1,68 @@
 pkgbase = hydrogen-drumkits
 	pkgdesc = Hydrogen drum kits
-	pkgver = 20170105
+	pkgver = 20180818
 	pkgrel = 1
 	url = http://www.hydrogen-music.org/hcms/node/16
 	changelog = ChangeLog
 	arch = any
 	license = GPL2
 	depends = hydrogen
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/3355606kit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/BJA_Pacific.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Boss_DR-110.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Classic-626.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Classic-808.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/ColomboAcousticDrumkit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/DeathMetal.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/EasternHop-1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/ElectricEmpireKit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/ErnysPercussion.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/ForzeeStereo.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/HardElectro1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/HipHop-1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/HipHop-2.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/K-27_Trash_Kit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Millo-Drums_v.1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Millo_MultiLayered2.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Millo_MultiLayered3.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Synthie-1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/TD-7kit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/TR808909.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/Techno-1.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/VariBreaks.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/YamahaVintageKit.h2drumkit
-	source = http://downloads.sourceforge.net/project/hydrogen/Sound%20Libraries/Main%20sound%20libraries/circAfrique v4.h2drumkit
-	md5sums = 5dad41a4f0fb5a9fda0af98b9f553060
-	md5sums = cde7a74a06edde3b5f85435c29909891
-	md5sums = f528892879ee04621055c4a3f12166c1
-	md5sums = 86dbdb8d2f9b12690e92211d36c6fe7d
-	md5sums = c08d5093fc28a30a7542f0c89493e807
-	md5sums = cb11827e185ab5a6906967901495884b
-	md5sums = 0465025dcf6659657b773874d168c27b
-	md5sums = 8750fcbe186e49a89bc18a9237ee6604
-	md5sums = df1bd778148cc25d8f63a8cc7aa91fcb
-	md5sums = 0e96f5971d5db887a186d5739c12ab77
-	md5sums = c6cd87bf54e0a760c5f4fecbff979100
-	md5sums = f953edf3f4227d786df59b544370e379
-	md5sums = 7f52d6ac56a31f5b618657d40d4eb86e
-	md5sums = 217f38ebf2849b20ff3a5dca1994be08
-	md5sums = f445c60d4625a6bfe6bb9dbac1ac0aa7
-	md5sums = 4c895d59c3bc5f3322d14789de345be2
-	md5sums = 2da5b8ee87bce3e67464c61ba0b722dd
-	md5sums = 79ca7360784ec72959aa07c3c584d76c
-	md5sums = 33f02627ac1489e4ab52c5f078c538b9
-	md5sums = 635274624e0a739c51b70f72a58cfcec
-	md5sums = 1db9cce82fbdaebac1ab4608be5853ea
-	md5sums = f91912fc88361dd8954c11f2e602aa25
-	md5sums = a9c305829cd23c28ffd1647cb5c0bdfd
-	md5sums = 8f63997dd789179fa009f84cc515fb3e
-	md5sums = e9d8604d2089abc764e54d1f209900b7
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/3355606kit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/BJA_Pacific.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Boss_DR-110.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Classic-626.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Classic-808.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/ColomboAcousticDrumkit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/DeathMetal.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/EasternHop-1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/ElectricEmpireKit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/ErnysPercussion.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/ForzeeStereo.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/HardElectro1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/HipHop-1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/HipHop-2.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/K-27_Trash_Kit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Lightning1024.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Millo-Drums_v.1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Millo_MultiLayered2.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Millo_MultiLayered3.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/SF3007-2011-Set-03.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Synthie-1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/TD-7kit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/TR808909.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/Techno-1.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/The Black Pearl 1.0.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/VariBreaks.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/YamahaVintageKit.h2drumkit
+	source = https://datapacket.dl.sourceforge.net/project/hydrogen/Sound Libraries/Main sound libraries/circAfrique v4.h2drumkit
+	sha256sums = 96b1d325fd52e97d7b99ca9191cb376e430ecea1f83d12281f314e30f20fa121
+	sha256sums = a485753a2a60a1ce30e782784c0f26a84bbbee6bdb324b40c04a1f09f3668305
+	sha256sums = 5debdfb050f639478725af134d315649f242142f84691ce1409cd9f56f6943be
+	sha256sums = 3e95845d821129b119dea47fd56eadbb17da74b3a95a2154cac31a037b8a6f66
+	sha256sums = 6be9d2dba736bfcbc85e31ecf744c74b6620143e4fdc198309c4786951077391
+	sha256sums = 30d30e6c9aeb25597454034cee58495b410a8f95b3d689c9a0c4e2915af7871f
+	sha256sums = 7ae4f8e7bf52b84637100b6f781e94752ad738626cff912c7704522ea692fbe7
+	sha256sums = 14ed0cd45097471e3f9775958f40441c1c2886d5594e0111e2b0b7e63b5da00f
+	sha256sums = 7229f52268483119c3a8b1e62dc85f801e37b6c34834e8c603d8aaec0445c5f9
+	sha256sums = daccb09332bf6aac09b83f9605a084120a9decff1447d02cc68d16b00f101546
+	sha256sums = 37b9f1d6d8fdf2a65aef5fcde5ac305c89983e1e23ce5b8194922640cce9146d
+	sha256sums = cfde7e4c7a25f0d72d0674b4d849471b9d309e28372709b509e743aad8c30d5c
+	sha256sums = d194d2d47cd33d09842ecb6db74783aaa89368e69a964868c7fd2feb3e1b7613
+	sha256sums = e2c586017bc4952976b8af5447435e7fa5109308861b5f5be3213d86346bd972
+	sha256sums = ad88e46d6e07a046cb5443e5bea4cc7645be992fc85e24853372cf5562c5ee24
+	sha256sums = f41377b32b154c809984e11ebaf0b7cfd9bac2ecc26b78c8de7c9bbd243f9310
+	sha256sums = c43d5b25938e95bcce4a204892e668b289f419b993e006bdf3f28c9c374b10c9
+	sha256sums = c81cebee6a4d0df70fee7456c13bbdfe2c50b39b62888cb03c0768f885eb74dd
+	sha256sums = 5927572af24f9a2737f94c7c8e816e22d6b28f00e19d575495c1a97351a79096
+	sha256sums = cffa12c5a176d9c9532bafacba773c0a0f7e2fe71ea5a14dae402d2de0726ccb
+	sha256sums = adcc4a3023708fab46108acfc99dfc04e2b2b62bb21aa87ed8a027ccbb46b576
+	sha256sums = 4e9400c2bb7d06f0271bcbf2e052235fe8500095d6e6dfcd8fcb0593571f110b
+	sha256sums = 4637f0c39b488074943030d6cb0274f3e35d1da221eb6d078c15ea118f4e496d
+	sha256sums = 83e072ef8e8783d861ce500a8082161392e49853a54335823e1cd7f7874c8504
+	sha256sums = 4fb52d1bbdda886db4b742c6de33d7475ef5088076c18533bd705c588f69a87b
+	sha256sums = ed7bfa21abc05712ea89860b7e680808d14d567d49377fbc65914a9dd518e14d
+	sha256sums = 17005f5c79d92af3caef52ea313b1ac5bc49f1eefa4462b22980dec2b031bf27
+	sha256sums = f09ff7e46310409b8ec7f180193cda6bb69e2a67d5e7f78f8c1c1954bb9a3a2c
 
 pkgname = hydrogen-drumkits
 
