@@ -1,3 +1,8 @@
+2018-09-10 Peter Sutton <foxxy(at)foxdogstudios(dot)com>
+
+	* 20170105-1:
+	Updated exiting drumkits and add new ones.
+
 2017-02-12 Peter Sutton <foxxy(at)foxdogstudios(dot)com>
 
 	* 20170105-1:
